# things-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-21-things-mcp.md
docs/superpowers/specs/: 2026-07-21-things-mcp-design.md
src/things_mcp/: __init__.py  applescript.py  db.py  doctor.py  read_backend.py  reads.py  runner.py  server.py  urlscheme.py  writes.py
tests/: conftest.py  test_applescript.py  test_db.py  test_doctor.py  test_read_backend.py  test_reads.py  test_runner.py  test_server.py  test_smoke.py  test_urlscheme.py  test_writes.py
tests/fixtures/: README.md
